--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ var css = "text-shadow: -1px -1px hsl(0,100%,50%), 1px 1px hsl(5.4, 100%, 50%), 
 console.log("%cyayoi", "color:pink; font-size:40px;")
 console.log("%c ", 'background: url(https://pimg.togetter.com/bf6a96c45d44a21e16c96c5f97491cc263fc0982/68747470733a2f2f692e696d6775722e636f6d2f583045664666482e6a7067); background-size: 100% 100%; padding: 100px 100px');
 console.log("%cうんち", css);
+console.log("%c目を覚ませ！", "color:red; font-size:40px;")
 </script>
 </head>
 <body>
