--- a/simple-vue/public/index.html
+++ b/simple-vue/public/index.html
@@ -4,8 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta property="og:title" content="ページのタイトル">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <meta property="og:title" content="てすとのたいとる" />
+    <meta property="og:type" content="article" />
+    <meta property="og:description" content="いろいろなせつめいをいれますよ" />
+    <meta property="og:image" content="uruuru.png" />
+    <link rel="icon" href="favicon.ico">
     <title>test</title>
   </head>
   <body>
